[gd_scene load_steps=8 format=2]

[ext_resource path="res://SFX.gd" type="Script" id=1]
[ext_resource path="res://SFXRand.gd" type="Script" id=2]
[ext_resource path="res://sfx/card_2.wav" type="AudioStream" id=3]
[ext_resource path="res://sfx/card_4.wav" type="AudioStream" id=4]
[ext_resource path="res://sfx/card_1.wav" type="AudioStream" id=5]
[ext_resource path="res://sfx/card_3.wav" type="AudioStream" id=6]
[ext_resource path="res://sfx/card_play.wav" type="AudioStream" id=7]

[node name="SFX" type="Node"]
script = ExtResource( 1 )

[node name="Card1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "Card_Handling"
script = ExtResource( 2 )

[node name="Card2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Card_Handling"
script = ExtResource( 2 )

[node name="Card3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "Card_Handling"
script = ExtResource( 2 )

[node name="Card4" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Card_Handling"
script = ExtResource( 2 )

[node name="CardPlay" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -6.0
bus = "SFX"
script = ExtResource( 2 )
